tests/spec/emit/snapshots/string_native_method_on_alias.snap
---
source: tests/spec/emit/prelude.rs
description: "input: \ntype MyString = string\n\nfn test(s: MyString) -> bool {\n  s.contains(\"foo\")\n}\n"
---
package main

import "strings"

type MyString = string

func test(s MyString) bool {
	return strings.Contains(s, "foo")
}
