tests/spec/emit/snapshots/string_range_from.snap
---
source: tests/spec/emit/types.rs
description: "input: \nfn test(s: string) -> string {\n  s[6..]\n}\n"
---
package main

func test(s string) string {
	return s[6:]
}
