tests/spec/emit/snapshots/string_range_to.snap
---
source: tests/spec/emit/types.rs
description: "input: \nfn test(s: string) -> string {\n  s[..5]\n}\n"
---
package main

func test(s string) string {
	return s[:5]
}
