tests/spec/emit/snapshots/string_rune_at.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: string, i: int) -> rune {
    s.rune_at(i)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(s string, i int) rune {
	return lisette.RuneAt(s, i)
}
