tests/spec/emit/snapshots/string_runes.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: string) -> Slice<rune> {
    s.runes()
  }
---
package main

func test(s string) []rune {
	return []rune(s)
}
