tests/spec/emit/snapshots/string_substring_aliased_range.snap
---
source: tests/spec/emit/prelude.rs
description: "input: \ntype Prefix = RangeTo<int>\nfn test(s: string, r: Prefix) -> string {\n  s.substring(r)\n}\n"
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Prefix = lisette.RangeTo[int]

func test(s string, r Prefix) string {
	return lisette.SubstringTo(s, r.End)
}
