tests/spec/emit/snapshots/string_substring_range.snap
---
source: tests/spec/emit/prelude.rs
description: "input: \nfn test(s: string) -> string {\n  s.substring(0..5)\n}\n"
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(s string) string {
	return lisette.Substring(s, 0, 5)
}
