tests/spec/emit/snapshots/string_substring_range_from.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: string) -> string {
    s.substring(6..)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(s string) string {
	return lisette.SubstringFrom(s, 6)
}
