tests/spec/emit/snapshots/string_substring_range_inclusive.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: string) -> string {
    s.substring(0..=4)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(s string) string {
	return lisette.Substring(s, 0, 4+1)
}
